--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,118 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-389.2KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-21.15MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-9.61MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇬🇧 英国-3.35MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-4.61MB/s(Youtube:不良林), server: 81.90.190.218, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-12.29MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20722, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: 625hk01.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 625hk01.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-378.6KB/s(Youtube:不良林), server: 625hk05.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 625hk05.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-592.3KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8060, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
-  - {name: 🇨🇳 中国-5.04MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8020, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
+  - {name: 🇭🇰 香港-23.22MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-16.32MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-21.92MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.92MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.92MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.92MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.92MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.92MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.92MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.92MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +132,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.92MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
