--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,10 +5,10 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8070, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
-  - {name: 🇺🇸 美国-22.66MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.12MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.07MB/s(Youtube:不良林), server: 81.90.190.218, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-3.60MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-410.2KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.35MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.42MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-23.22MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-16.32MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
@@ -21,10 +21,10 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-23.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
@@ -36,10 +36,10 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-23.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
@@ -52,10 +52,10 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-23.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
@@ -72,10 +72,10 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-23.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
@@ -87,10 +87,10 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-23.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
@@ -103,10 +103,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-23.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
@@ -128,10 +128,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-23.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
